# ai-object-detection

./: .gitignore  README.md  detect_people.py  pyproject.toml  select_people_pytorch.py
src/: detect_people.py  select_people_from_dir.py
